# PrintScript

./: .gitignore  LICENSE  README.md  pyproject.toml  requirements.txt
generator/: common.py  device.py  zpl.py
src/PrintScript/: algorithm.py  common.py  device.py  tspl.py  zpl.py
