[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "PrintScript"
version = "1.3.0"
authors = [
    { name = "Alex Chen", email = "laplacedoge@gmail.com"},
]
description = "A package for making print scripts"
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
    "opencv-python",
    "crcmod",
    "numpy",
    "numba",
]

[project.urls]
Homepage = "https://github.com/laplacedoge/PrintScript"
Issues = "https://github.com/laplacedoge/PrintScript/issues"
